[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Enemigos/ave/Pajaro enemigo sprite 2.png" type="Texture" id=1]
[ext_resource path="res://Enemigo/Enemigo_Ave/Ave.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemigos/ave/Pajaro enemigo sprite 3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemigos/ave/Pajaro enemigo sprite 1.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 43.0465

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1168, 193 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1164.25, 176.75 )

[node name="Ave" type="KinematicBody2D" groups=["enemigo"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -6, 1.5 )
scale = Vector2( 0.2, 0.20125 )
frames = SubResource( 4 )
animation = "Idle"

[node name="movimiento_laterales" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="movimiento_laterales"]
position = Vector2( -2, -264 )
shape = SubResource( 2 )

[node name="movimoento_libre" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="movimoento_libre"]
position = Vector2( -6.75, 206.25 )
shape = SubResource( 3 )

[connection signal="body_entered" from="movimiento_laterales" to="." method="_on_movimiento_laterales_body_entered"]
[connection signal="body_exited" from="movimiento_laterales" to="." method="_on_movimiento_laterales_body_exited"]
[connection signal="body_entered" from="movimoento_libre" to="." method="_on_movimoento_libre_body_entered"]
[connection signal="body_exited" from="movimoento_libre" to="." method="_on_movimoento_libre_body_exited"]
